# CppCmakeTemplate

./: .travis.yml  CMakeLists.txt
App/: CMakeLists.txt  main.cc  main.cpp
benchmarks/: CMakeLists.txt  main.cpp
cmake/: Documentation.cmake
docs/: Doxyfile.in
include/: my_lib.h  projectConfig.h.in
src/: CMakeLists.txt  my_lib.cpp
tests/: CMakeLists.txt  main.cpp
